feat: add health check endpoint; add Dockerfile
